Fix promo section spacing and alignment

--- a/css/style.css
+++ b/css/style.css
@@ -614,10 +614,11 @@ h1 span {
 
 
 .promo-card img {
-  margin-top: -100px;
+  margin-top: -80px;
 }
 
 .promo-text {
+  padding-top: 37px;
   display: flex;
   flex-direction: column;
   align-items: end;
